migrating to main only task

--- a/roles/apache/tasks/main.yml
+++ b/roles/apache/tasks/main.yml
@@ -1,2 +1,12 @@
 ---
-- include_tasks: apache.yml
+- name: This sets up an httpd webserver
+  hosts: all
+  tasks:
+  - name: Install apache packages
+    yum:
+      name: httpd
+      state: present
+  - name: ensure httpd is running
+    service:
+      name: httpd
+      state: started
